--- a/red_cs.csproj
+++ b/red_cs.csproj
@@ -7,8 +7,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="DSharpPlus" Version="4.4.6" />
+    <PackageReference Include="DSharpPlus" Version="5.0.0" />
     <PackageReference Include="DotNetEnv" Version="3.0.0" />
+    <PackageReference Include="DSharpPlus.SlashCommands" Version="5.0.0" />
   </ItemGroup>
 
 </Project>
